--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-We are very saddened that Arjun won't be joining us!
+This website is currently under construction. Please reach out to us in facebook until this becomes functional. We can be reached at www.facebook.com/hunsanepal.
